--- a/map.html
+++ b/map.html
@@ -56,8 +56,7 @@
 
 			var activeMarkers = {};
 
-			mapboxgl.accessToken = "pk.eyJ1IjoiY2hyaXNweWZyZXkiLCJhIjoiY2tjem16aDBvMDJucjJycDA2NG" +
-								   "1udDZmZyJ9.QxzrxZql5ZGUksE9Iag7Aw";
+			mapboxgl.accessToken = "YOUR_PRIVATE_KEY";
 
 			var map = new mapboxgl.Map({ 
 				container: 'map',
